<?xml version="1.0"?>
<package>
  <name>fremen</name>
  <version>0.0.0</version>
  <description>Frequency Map Enhancement</description>
  
  <!-- Frequency Map Enhancement is an idea that allows to introduce dynamics into spatial models
  used in the mobile robotics domain. Many of these spatial models describe the enviroment by a set of
  discrete components with binary states. For example, cells of an occupancy grid are occupied or
  free, edges of a topological map are traversable or not, doors are opened or closed, rooms are
  vacant or occupied, landmarks are visible or occluded, etc. Typically, the state of each model
  component is uncertain, because it is measured indirectly by means of sensors which are affected
  by noise. The idea assumes that in populated evironments, many of the observed changes are caused
  by humans performing their daily activities. Therefore, the environment's dynamics can be modeled
  by its frequency spectrum, as a combination of harmonic functions that correspond to periodic
  processes influencing the environment. Such a representation not only allows representation of
  environment dynamics over arbitrary timescales with constant memory requirements, but also
  prediction of future environment states. The proposed approach can be applied to many of the
  state-of-the-art environment models. Models like occupancy grids, topological or landmark maps can
  be easily extended by FreMEn. We present experiments using data collected by a mobile robot
  patrolling an indoor environment over a period of one month, where frequency-enhanced models were
  compared to their static counterparts in four scenarios: i) 3D map building, ii) environment state
  prediction, iii) topological localisation and iv) anomaly detection, in order to verify the
  model's ability to detect unusual events. In all these cases, the frequency-enhanced models
  outperformed their static counterparts. -->

  <maintainer email="tomkrajnik@hotmail.com">gestom</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>octomap</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>genmsg</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>libfftw3</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend> actionlib_msgs</build_depend>

  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>octomap</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>genmsg</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>libpcl-all</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>

</package>